style:add flex-shrink:0 to Nav element to avoid wrap words with A Propos

--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -3,6 +3,7 @@
 .ul {
   display: flex;
   gap: clamp(0.5rem, 3vw, 3rem);
+  margin-left: 2rem;
   font-size: clamp(a.$fz-base, 0.3rem + 2vw, a.$fz-lg);
 
   .active {
@@ -14,5 +15,8 @@
 @include a.respond-to(sm) {
   .ul {
     text-transform: uppercase;
+    & > li {
+      flex-shrink: 0;
+    }
   }
 }
